--- a/package.json
+++ b/package.json
@@ -3,6 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "emoji-mart": "^2.6.1",
+    "firebase": "^5.3.0",
+    "md5": "^2.2.1",
+    "mime-types": "^2.1.20",
+    "moment": "^2.22.2",
+    "react-avatar-editor": "^11.0.4",
+    "react-color": "^2.14.1",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
+    "redux": "^4.0.0",
+    "redux-devtools-extension": "^2.13.5",
+    "semantic-ui-css": "^2.3.3",
+    "semantic-ui-react": "^0.82.1",
+    "uuid": "^3.3.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.1"
